<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/preenchaDadosTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:background="#9fddf5"
            android:text="@string/preenchaDadosTv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/nomeCompletoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/nomeCompletoEt"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/preenchaDadosTv" />

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/emailEt"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nomeCompletoEt" />

        <TextView
            android:id="@+id/receberEmailsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receberEmailsTv"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEt"
            />

        <RadioGroup
            android:id="@+id/receberEmailsRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receberEmailsTv">

            <RadioButton
                android:id="@+id/simRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simRb"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/naoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/naoRb"
                app:layout_constraintStart_toEndOf="@+id/simRb"/>

        </RadioGroup>

        <TextView
            android:id="@+id/telefoneTipoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/telefoneTipoTv"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/receberEmailsRg"
            />

        <RadioGroup
            android:id="@+id/telefoneTipoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneTipoTv">

            <RadioButton
                android:id="@+id/comercialRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comercialRb"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/residencialRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/residencialRb" />

        </RadioGroup>

        <EditText
            android:id="@+id/telefoneEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/telefoneEt"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneTipoRg" />

        <Button
            android:id="@+id/telefoneCelularBt"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/telefoneCelularBt"
            android:textColor="#00BCD4"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneEt" />

        <EditText
            android:id="@+id/telefoneCelularEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/telefoneCelularEt"
            android:inputType="number"
            android:minHeight="48dp"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneCelularBt" />

        <TextView
            android:id="@+id/sexoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sexoTv"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneCelularEt"
            />

        <RadioGroup
            android:id="@+id/sexoRg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefoneCelularEt">

            <RadioButton
                android:id="@+id/masculinoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masculinoRb"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/femininoRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/femininoRb" />

        </RadioGroup>

        <TextView
            android:id="@+id/dataNascimentoTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataNascimentoTv"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexoRg"
            />

        <DatePicker
            android:id="@+id/dataNascimentoDp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            app:layout_constraintTop_toBottomOf="@+id/dataNascimentoTv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/formacaoSp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/formacao"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dataNascimentoDp"
            />

        <EditText
            android:id="@+id/anoFormacaoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/anoFormacaoEt"
            android:inputType="number"
            android:visibility="gone"
            android:minHeight="48dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/formacaoSp" />

        <EditText
            android:id="@+id/instituicaoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/instituicaoEt"
            android:inputType="text"
            android:visibility="gone"
            android:minHeight="48dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anoFormacaoEt" />

        <EditText
            android:id="@+id/tituloMonografiaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/tituloMonografiaEt"
            android:inputType="text"
            android:visibility="gone"
            android:minHeight="48dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instituicaoEt" />

        <EditText
            android:id="@+id/orientadorEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/orientadorEt"
            android:inputType="textPersonName"
            android:visibility="gone"
            android:minHeight="48dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tituloMonografiaEt" />

        <EditText
            android:id="@+id/vagasInteresseEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:maxLines="30"
            android:hint="@string/vagasInteresseEt"
            android:inputType="textMultiLine"
            android:gravity="left|top"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orientadorEt" />

        <Button
            android:id="@+id/salvarBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salvarBt"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vagasInteresseEt"/>

        <Button
            android:id="@+id/limparBt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limparBt"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/salvarBt"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>